Remove MatSidenav at AppListComponent to avoid double scrolling
https://github.com/jgarciao/linux-store-frontend/issues/1

--- a/src/app/pages/app-list/app-list.component.scss
+++ b/src/app/pages/app-list/app-list.component.scss
@@ -1,14 +1,6 @@
 
-/*This will work for firefox*/
-@-moz-document url-prefix() {
-  mat-sidenav-container{
-    height: calc(200vh - 87px - 150px);
-  }
-}
-
-
-mat-sidenav {
-  width: 100px;
+header{
+  padding-bottom: 0px;
 }
 
 .app-tile-icon{
